--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@csstools/normalize.css": "^12.0.0",
     "@types/sass": "^1.43.1",
     "classnames": "^2.3.1",
+    "file-saver": "^2.0.5",
     "next": "12.1.6",
     "normalize.css": "^8.0.1",
     "react": "18.1.0",
@@ -21,6 +22,7 @@
     "sass": "^1.52.1"
   },
   "devDependencies": {
+    "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
     "@types/react-dom": "18.0.5",
