--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "sass": "^1.52.1"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.35",
     "@types/react": "18.0.9",
