--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/sass": "^1.43.1",
     "classnames": "^2.3.1",
     "file-saver": "^2.0.5",
+    "framer-motion": "^6.3.4",
     "next": "12.1.6",
     "normalize.css": "^8.0.1",
     "react": "18.1.0",
