--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@csstools/normalize.css": "^12.0.0",
     "@types/sass": "^1.43.1",
+    "axios": "^0.27.2",
     "classnames": "^2.3.1",
     "file-saver": "^2.0.5",
     "framer-motion": "^6.3.4",
