--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sass": "^1.52.1"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^12.1.6",
     "@svgr/webpack": "^6.2.1",
     "@types/file-saver": "^2.0.5",
     "@types/node": "17.0.35",
@@ -32,6 +33,7 @@
     "@types/sass": "^1.43.1",
     "@typescript-eslint/eslint-plugin": "^5.12.1",
     "@typescript-eslint/parser": "^5.12.1",
+    "babel-plugin-inline-react-svg": "^2.0.1",
     "eslint": "^8.10.0",
     "eslint-config-google": "^0.14.0",
     "eslint-plugin-jsdoc": "^37.9.5",
