--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "GENERATE_SOURCEMAP=false next build",
+    "build": "next build",
     "start": "next start",
     "lint": "eslint src/*",
     "lint:fix": "eslint src/* --fix",
