--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,39 +1,29 @@
 {
   "root": true,
+  "parser": "@typescript-eslint/parser",
+  "plugins": [
+    "@typescript-eslint"
+  ],
+  "rules": {
+    "semi": "off",
+    "@typescript-eslint/semi": [
+      "warn"
+    ],
+    "@typescript-eslint/no-empty-interface": [
+      "error",
+      {
+        "allowSingleExtends": true
+      }
+    ]
+  },
   "env": {
     "browser": true,
-    "es2021": true,
+    "amd": true,
     "node": true
   },
   "extends": [
     "eslint:recommended",
-    "plugin:@next/next/recommended",
-    "google",
-    "plugin:jsdoc/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": "latest",
-    "sourceType": "module"
-  },
-  "plugins": [
-    "react",
-    "@typescript-eslint/eslint-plugin"
-  ],
-  "rules": {
-    "max-len": "off",
-    "linebreak-style": "off",
-    "comma-dangle": "off",
-    "no-undef": "off",
-    "object-curly-spacing": "off",
-    "react/react-in-jsx-scope": "off",
-    "indent": "off",
-    "space-before-function-paren": "off",
-    "react/display-name": "off",
-    "operator-linebreak": "off",
-    "no-empty-pattern": "off"
-  }
+    "plugin:@typescript-eslint/eslint-recommended",
+    "plugin:@typescript-eslint/recommended"
+  ]
 }
